# sx.stats-substreams

./: .gitignore  Cargo.toml  Makefile  README.md  substreams.yaml
.github/workflows/: ci.yml  release.yml
common/: common-v0.3.0.spkg  substreams.yaml
eosmechanics/: eosmechanics-v0.3.5.spkg
proto/v1/: eosmechanics.proto  stats.proto
src/: abi.rs  lib.rs  maps.rs  sink.rs  sinks.rs  utils.rs
src/pb/: eosmechanics.v1.rs  mod.rs  stats.v1.rs
