[package]
name = "sx"
version = "2.3.2"
description = "SX Stats"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
antelope = "0.1.4"
substreams = "0.5"
substreams-antelope = "0.1"
substreams-sink-prometheus = "0.1"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
